assets/css/custom/_layout.scss
.header {
  font-size: 1.4rem;
  height: 7rem;
  background-color: #fff;
  border-bottom: var(--border-light);
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  display: flex;
  justify-content: space-between;
  align-items: center;
  z-index: 10;

  @media only screen and (max-width: $bp-large) {
    flex-wrap: wrap;
    height: 11rem;
    align-content: space-between;
    padding-top: 1.5rem;

  }

}

.content {

  display: flex;
  margin-top: 7em;

  @media only screen and (max-width: $bp-large) {
    margin-top: 11rem;
  }


  @media only screen and (max-width: $bp-medium){
    flex-direction: column;
  }
}

.contentLeft {
  background-color: var(--color-grey-dark-1);
  flex: 0 0 18%;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  height: 90vh;
}

.contentRight {
  padding: 10rem 10rem;
}

